--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 AUTH_SECRET=your-super-secret-key-at-least-32-
-DATABASE_URL=postgres://root:12345@localhost:8000/dbname
+DATABASE_URL=postgresql://neondb_owner:npg_3CAVnMjuy8XT@ep-curly-smoke-a13zavoi-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 RESEND_API_KEY=your_resend_api_key
 NODE_ENV=production
-AUTH_URL=http://localhost:3000
-# For production on Vercel, use your actual domain:
-# AUTH_URL=https://yourdomain.vercel.app
+AUTH_URL=https://brainedify.com/
+
+# AUTH_URL=http://localhost:3000
