--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,12 @@
 AUTH_SECRET=your-super-secret-key-at-least-32-
-DATABASE_URL='postgresql://neondb_owner:npg_3CAVnMjuy8XT@ep-curly-smoke-a13zavoi-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
-RESEND_API_KEY=your_resend_api_key
-NODE_ENV=production
-AUTH_URL=https://brainedify.com/
-APP_URL=https://brainedify.com/
+RESEND_API_KEY=re_iQdcLxxW_2YSLDbpEJFXQP3cqW2qzDNDo
+NODE_ENV=local
+APP_URL=http://localhost:3000
+AUTH_URL=http://localhost:3000
+DATABASE_URL=postgresql://neondb_owner:npg_3CAVnMjuy8XT@ep-curly-smoke-a13zavoi-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 
-# AUTH_URL=http://localhost:3000
-# DATABASE_URL=postgresql://neondb_owner:npg_3CAVnMjuy8XT@ep-curly-smoke-a13zavoi-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+
+# NODE_ENV=production
+# AUTH_URL=https://brainedify.com/
+# APP_URL=https://brainedify.com/
+# DATABASE_URL='postgresql://neondb_owner:npg_3CAVnMjuy8XT@ep-curly-smoke-a13zavoi-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
